Make sure newsletter email field isn't too big

--- a/app/assets/stylesheets/shared/_footer.scss
+++ b/app/assets/stylesheets/shared/_footer.scss
@@ -13,6 +13,16 @@ footer {
       font-size: 11px;
       padding: 6px 0 6px 0;
     }
+  }
+
+  .newsletter {
+    input[type=email] {
+      margin: 0 0.5em 0.5em 0;
+      max-width: 20em;
+      width: 90%;
+    }
+  }
+
   p.small {
     color: white;
     font-size: 11px;
